--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -1,25 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
     tools:context="org.publicntp.gnssreader.ui.ServerFragment">
 
-    <ImageView
-        android:id="@+id/truiton_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher"/>
+    <com.github.mikephil.charting.charts.ScatterChart
+        android:id="@+id/server_graph_activity"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/server_layout_net_activity"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/truiton_image"
-        android:layout_centerHorizontal="true"
-        android:text="Server Fragment"
-        android:textSize="30sp"/>
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/server_graph_activity">
+
+        <TextView
+            android:id="@+id/server_display_net_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="0dp"
+            android:fontFamily="@font/roboto"
+            android:text="1,234"
+            android:textColor="@color/primary_dark"
+            android:textSize="45sp"
+            tools:text="0,000" />
+
+        <TextView
+            android:id="@+id/server_display_net_units"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/server_display_net_activity"
+            android:layout_alignBottom="@+id/server_display_net_activity"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/server_display_net_activity"
+            android:fontFamily="@font/roboto_medium"
+            android:text="packets/sec"
+            android:textColor="@color/primary_dark"
+            android:textSize="20sp"
+            tools:text="units" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/server_layout_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/server_layout_net_activity">
+
+        <TextView
+            android:id="@+id/server_display_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="0dp"
+            android:fontFamily="@font/roboto"
+            android:text="23:45:43"
+            android:textColor="@color/primary_dark"
+            android:textSize="45sp"
+            tools:text="00:00:00" />
+
+        <TextView
+            android:id="@+id/server_display_time_zone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/server_display_time"
+            android:layout_alignBottom="@+id/server_display_time"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/server_display_time"
+            android:fontFamily="@font/roboto_medium"
+            android:text="UTC"
+            android:textColor="@color/primary_dark"
+            android:textSize="20sp"
+            tools:text="TZONE" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/server_layout_offset"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/server_layout_time">
+
+        <TextView
+            android:id="@+id/server_text_offset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="0dp"
+            android:fontFamily="@font/roboto_light"
+            android:text="±1.234"
+            android:textColor="@color/primary"
+            android:textSize="34sp"
+            tools:text="±0.000" />
+
+        <TextView
+            android:id="@+id/time_text_offset_units"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/server_text_offset"
+            android:layout_alignBottom="@+id/server_text_offset"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/server_text_offset"
+            android:fontFamily="@font/roboto_light"
+            android:text="seconds"
+            android:textColor="@color/primary"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/server_btn_toggle"
+        style="@style/AppTheme.Button.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="Server On"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/server_layout_offset"
+        tools:text="server toggle" />
 
 </android.support.constraint.ConstraintLayout>
