--- a/app/src/main/res/layout/fragment_satellite.xml
+++ b/app/src/main/res/layout/fragment_satellite.xml
@@ -29,29 +29,29 @@
 
     </RelativeLayout>
 
-    <com.github.mikephil.charting.charts.RadarChart
-        android:id="@+id/satellite_graph_radial"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+    <org.publicntp.gnssreader.ui.chart.SatelliteRadialPlotChart
+        android:id="@+id/satellite_radial_plot"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/satellite_layout_count" />
+        app:layout_constraintTop_toBottomOf="@id/satellite_layout_count"/>
 
 
     <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/satellite_graph_signal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:id="@+id/satellite_snr_bar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintDimensionRatio="H,3:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/satellite_graph_radial"/>
-
+        app:layout_constraintTop_toBottomOf="@id/satellite_radial_plot" />
 
 </android.support.constraint.ConstraintLayout>
